tests/baselines/reference/awaitUsingDeclarationsWithImportHelpers.errors.txt
awaitUsingDeclarationsWithImportHelpers.ts(4,5): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== awaitUsingDeclarationsWithImportHelpers.ts (1 errors) ====
    export {};
    
    async function f() {
        await using a = null;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    }